Add validation annotations to ReferralRequest fields